...
                        }
                    }
                    .padding(.horizontal)
                    
                    // Workout plan
                    VStack(alignment: .leading, spacing: 10) {
                        Text("Your Weekly Plan")
                            .font(.title2)
                            .fontWeight(.bold)
                            .padding(.horizontal)
                        
                        ForEach(workoutPlan) { workout in
                            NavigationLink(destination: WorkoutDetailView(workout: workout)) {
...
                    }
                    .padding(.horizontal)
                    .padding(.bottom)
                }
                .padding(.top)
            }
            .navigationTitle("Your Training Plan")
            .onAppear {
                refreshUserData()
            }
            .toolbar {
                ToolbarItem(placement: .principal) {
                    HStack {
...
